--- a/english-puzzle/package.json
+++ b/english-puzzle/package.json
@@ -17,6 +17,7 @@
     "@babel/plugin-transform-runtime": "^7.10.1",
     "@babel/preset-env": "^7.10.2",
     "babel-loader": "^8.1.0",
+    "copy-webpack-plugin": "^6.0.2",
     "css-loader": "^3.5.3",
     "eslint": "^7.2.0",
     "eslint-config-airbnb-base": "^14.1.0",
